--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>HOMEPAGE</h1>
+    <form action="/login">
+        <button  type="submit">Login Page</button>
+    </form>
+    <form action="/signup">
+        <button  type="submit">Signup Page</button>
+    </form>
+    
 </body>
 </html>
