Completed statefull Authentication

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/hurr/demo">
+        <button type="submit">Demo Page</button>
+    </form>
     <h1>HOMEPAGE</h1>
+
     <form action="/login">
         <button  type="submit">Login Page</button>
     </form>
