--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
         <label>Password:</label>
         <input type="password" name="password">
         <br>
-        <button type="submit">Signup</button>
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
