--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -10,7 +10,7 @@
         <button type="submit">Demo Page</button>
     </form>
     <h1>HOMEPAGE</h1>
-
+    <p><%= locals.message %></p>
     <form action="/login">
         <button  type="submit">Login Page</button>
     </form>
